Fixed stacking on mobile

--- a/src/components/Contentful/sass/sections/_contact.scss
+++ b/src/components/Contentful/sass/sections/_contact.scss
@@ -47,9 +47,12 @@
         align-items: center;
         margin-bottom: 50px;
 
+        @include mobile {
+            display: block;
+        }
+
         .prose {
             margin-top: 0;
-            display: inline-grid;
             margin-left: 20px;
             line-height: 1.5;
 
